--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -23,3 +23,7 @@ enabled_layouts		splits
 map ctrl+9		launch --location=hsplit
 map ctrl+0		launch --location=vsplit
 map ctrl+tab		next_window
+map shift+up		move_window up
+map shift+left		move_window left
+map shift+right		move_window right
+map shift+down		move_window down
