--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -2,9 +2,9 @@
 include			./nord.conf
 
 # Font
-font_family		Monofur Nerd Font Mono
-font_size		15
-bold_font		Monofurbold Nerd Font Mono
+font_family		FantasqueSansMono Nerd Font
+font_size		11
+bold_font		auto
 italic_font		auto
 bold_italic_font	auto
 
@@ -13,10 +13,12 @@ window_border_width	0.5pt
 hide_window_decorations	yes
 window_padding_width	5
 window_padding_height	5
-background_opacity	0.75
+background_opacity	0.95
 
 # Miscellaneous
 enable_audio_bell	no
+active_border_color	#88ff88
+inactive_border_color	#8888ff
 
 # Window tiling
 enabled_layouts		splits
