More kitty updates

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -2,18 +2,28 @@
 include			./nord.conf
 
 # Font
-font_family		FantasqueSansMono Nerd Font
-font_size		11
+font_family		FantasqueSansMono NF
+font_size		13
 bold_font		auto
 italic_font		auto
 bold_italic_font	auto
 
 # Window properties
-window_border_width	0.5pt
+window_border_width	0.5
 hide_window_decorations	yes
 window_padding_width	5
 window_padding_height	5
+
 background_opacity	0.95
+
+# Window border line
+window_margin_width	10
+window_border_color	#ff0000
+
+tab_border_width	0.5
+tab_border_color	#ff0000
+
+tab_bar_style		separator
 
 # Miscellaneous
 enable_audio_bell	no
@@ -29,3 +39,4 @@ map shift+up		move_window up
 map shift+left		move_window left
 map shift+right		move_window right
 map shift+down		move_window down
+map ctrl+r		start_resizing_window
