--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 # Themes
-include			./nord.conf
+include			./Gruvbox_Dark.conf
 
 # Font
-font_family		FantasqueSansMono NF
-font_size		13
+font_family		FantasqueSansMono Nerd Font
+font_size		10
 bold_font		auto
 italic_font		auto
 bold_italic_font	auto
@@ -11,13 +11,13 @@ bold_italic_font	auto
 # Window properties
 window_border_width	0.5
 hide_window_decorations	yes
-window_padding_width	5
-window_padding_height	5
+window_padding_width	3
+window_padding_height	3
 
 background_opacity	0.95
 
 # Window border line
-window_margin_width	10
+window_margin_width	5
 window_border_color	#ff0000
 
 tab_border_width	0.5
