--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # Themes
-include			./Gruvbox_Dark.conf
+include			catppuccin/frappe.conf
 
 # Font
 font_family		FantasqueSansMono Nerd Font
@@ -10,7 +10,7 @@ bold_italic_font	auto
 
 # Window properties
 window_border_width	0.5
-hide_window_decorations	yes
+hide_window_decorations	no
 window_padding_width	3
 window_padding_height	3
 
