Adding updated polybar

--- a/dot_config/polybar/preview.ini
+++ b/dot_config/polybar/preview.ini
@@ -1,9 +1,11 @@
-;; ┌────────────────────────────────────────────────────────────┐
-;; │░█▀█░█▀█░█░░░█░█░█▀▄░█▀█░█▀▄░░░░░░░░░█▀▀░█▀█░█▀█░█▀▀░▀█▀░█▀▀│
-;; │░█▀▀░█░█░█░░░░█░░█▀▄░█▀█░█▀▄░░░░▀░░░░█░░░█░█░█░█░█▀▀░░█░░█░█│
-;; │░▀░░░▀▀▀░▀▀▀░░▀░░▀▀░░▀░▀░▀░▀░░░░▀░░░░▀▀▀░▀▀▀░▀░▀░▀░░░▀▀▀░▀▀▀│
-;; │░Created░By░Aditya░Shakya░@adi1090x░░░░░░░░░░░░░░░░░░░░░░░░░│
-;; └────────────────────────────────────────────────────────────┘
+;; ┌────────────────────────────────────────────────────────────────────┐
+;; │░█▀█░█▀█░█░░░█░█░█▀▄░█▀█░█▀▄░░░░░░░░░█▀█░█▀▄░█▀▀░█░█░▀█▀░█▀▀░█░█░█▀▀│
+;; │░█▀▀░█░█░█░░░░█░░█▀▄░█▀█░█▀▄░░░░▀░░░░█▀▀░█▀▄░█▀▀░▀▄▀░░█░░█▀▀░█▄█░▀▀█│
+;; │░▀░░░▀▀▀░▀▀▀░░▀░░▀▀░░▀░▀░▀░▀░░░░▀░░░░▀░░░▀░▀░▀▀▀░░▀░░▀▀▀░▀▀▀░▀░▀░▀▀▀│
+;; │░Created░By░Aditya░Shakya░@adi1090x░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
+;; └────────────────────────────────────────────────────────────────────┘
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -23,10 +25,10 @@ margin-top = 0
 ;; File Inclusion
 ; include an external file, like module file, etc.
 
-include-file = ~/.config/polybar/bars.ini
-include-file = ~/.config/polybar/colors.ini
-include-file = ~/.config/polybar/modules.ini
-include-file = ~/.config/polybar/user_modules.ini
+include-file = ~/.config/polybar/shades/bars.ini
+include-file = ~/.config/polybar/shades/colors.ini
+include-file = ~/.config/polybar/shades/modules.ini
+include-file = ~/.config/polybar/shades/user_modules.ini
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -57,12 +59,18 @@ bottom = false
 ; When false, the center position will be based on the size of the other blocks.
 fixed-center = true
 
-; Dimensions
-width = 99.5%
-offset-x = 0.25%
-offset-y = 5pt
-height = 24pt
-radius = 3
+; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
+; the percentage can optionally be extended with a pixel offset like so:
+; 50%:-10, this will result in a width or height of 50% minus 10 pixels
+width = 98%
+height = 34
+
+; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
+; the percentage can optionally be extended with a pixel offset like so:
+; 50%:-10, this will result in an offset in the x or y direction 
+; of 50% minus 10 pixels
+offset-x = 1%
+offset-y = 2%
 
 ; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
 background = ${color.background}
@@ -79,8 +87,8 @@ foreground = ${color.foreground}
 ; doesn't get rounded
 ; Individual top/bottom values can be defined using:
 ;   radius-{top,bottom}
-; radius-top = 0.0
-; radius-bottom = 0.0
+radius-top = 0.0
+radius-bottom = 0.0
 
 ; Under-/overline pixel size and argb color
 ; Individual values can be defined using:
@@ -124,16 +132,34 @@ module-margin-right = 0
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = FantasqueSansMono Nerd Font:size=15;2
+font-0 = "Terminus:size=10;3"
+font-1 = "waffle:size=10;3"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = launcher workspaces google github reddit gmail youtube spotify
-modules-center = spotify-status spotify-prev spotify-play-pause spotify-next
-modules-right = pulseaudio battery network date sysmenu
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[bar/top]
+inherit = bar/main
+modules-left = launcher workspaces google github reddit gmail youtube
+modules-right = mpd updates alsa battery network date sysmenu
+enable-ipc = true
+
+[bar/mid]
+offset-y = 66
+inherit = bar/main
+modules-center = battery_bar cpu_bar memory_bar filesystem_bar mpd_bar volume brightness
+enable-ipc = true
+
+[bar/bottom]
+inherit = bar/main
+offset-y = 110
+modules-left = menu title cpu memory filesystem temperature
+modules-right = color-switch keyboard pulseaudio backlight powermenu
+enable-ipc = true
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -204,7 +230,7 @@ tray-scale = 1.0
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
-enable-ipc = true
+;enable-ipc = true
 
 ; Fallback click handlers that will be called if
 ; there's no matching module handler found.
