--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 # Themes
-include			catppuccin/frappe.conf
+include			Gruvbox_Dark.conf
 
 # Font
 font_family		FantasqueSansMono Nerd Font
-font_size		10
+font_size		15
 bold_font		auto
 italic_font		auto
 bold_italic_font	auto
