Updated scripts to make powermenu and window_switcher nicer

--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -239,6 +239,10 @@ cursor-scroll =
 ;;scroll-up = i3-msg workspace next_on_output
 ;;scroll-down = i3-msg workspace prev_on_output
 
+[bar/external-hdmi-0]
+inherit = bar/main
+monitor=HDMI-0
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ;; Application Settings
