Pre distro-hop updates

--- a/dot_config/polybar/colors.ini
+++ b/dot_config/polybar/colors.ini
@@ -1,29 +1,25 @@
-;; ┌────────────────────────────────────────────────────────────┐
-;; │░█▀█░█▀█░█░░░█░█░█▀▄░█▀█░█▀▄░░░░░░░░░█▀▀░█▀█░█░░░█▀█░█▀▄░█▀▀│
-;; │░█▀▀░█░█░█░░░░█░░█▀▄░█▀█░█▀▄░░░░▀░░░░█░░░█░█░█░░░█░█░█▀▄░▀▀█│
-;; │░▀░░░▀▀▀░▀▀▀░░▀░░▀▀░░▀░▀░▀░▀░░░░▀░░░░▀▀▀░▀▀▀░▀▀▀░▀▀▀░▀░▀░▀▀▀│
-;; │░Created░By░Aditya░Shakya░@adi1090x░░░░░░░░░░░░░░░░░░░░░░░░░│
-;; └────────────────────────────────────────────────────────────┘
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
 [color]
 
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #121a1b
-foreground = #b3baba
-foreground-alt = #7d8282
+background = #5598685C
+foreground = #cccccc
+foreground-alt = #000000
 
 ;; shades
-shade1 = #3D6446
-shade2 = #4C4F4F
-shade3 = #3D6446
-shade4 = #4C4F4F
-shade5 = #3D6446
-shade6 = #4C4F4F
-shade7 = #3D6446
-shade8 = #b3baba
+shade1 = #55eb1c4d
+shade2 = #33eb1c4d
+shade3 = #55eb1c4d
+shade4 = #77eb1c4d
+shade5 = #99eb1c4d
+shade6 = #bbeb1c4d
+shade7 = #ddeb1c4d
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+;; Left bar colors
+left_background = #99c494d6
+left_background_lighter = #99e6c4f2
+
+;; Center bar colors
+info_bar = #99e663be
+info_bar_darker = #99c9349c
