--- a/dot_config/polybar/user_modules.ini
+++ b/dot_config/polybar/user_modules.ini
@@ -65,12 +65,12 @@ click-right = exo-open --launch kitty &
 
 [module/launcher]
 type = custom/text
-content =  
+content = venki
 
 ; "content" has the same properties as "format-NAME"
-content-background = ${color.shade1}
-content-foreground = ${color.foreground}
-content-padding = 2
+content-background = ${color.left_background}
+content-foreground = ${color.foreground-alt}
+content-padding = 10px
 
 ; TODO: eww widget to browse apps
 click-left = ~/.config/polybar/scripts/launcher.sh &
@@ -81,11 +81,11 @@ click-left = ~/.config/polybar/scripts/launcher.sh &
 type = custom/text
 content = ⏻
 
-content-background = ${color.shade2}
+content-background = ${color.shade7}
 content-foreground = ${color.foreground}
 content-padding = 2
 
-click-left = ~/.config/polybar/scripts/powermenu.sh &
+click-left = ~/.config/bin/powermenu &
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -168,6 +168,14 @@ format = <label>
 click-left = playerctl next -p spotify
 ; Margin
 format-margin = 10pt
+
+[module/media]
+type = custom/text
+content =  
+click-left = ~/.config/polybar/scripts/linux_media_controller.sh > /dev/null 2>&1 &
+content-padding = 2
+content-background = ${color.shade3}
+; format-margin = 10pt
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
