--- a/dot_config/polybar/bars.ini
+++ b/dot_config/polybar/bars.ini
@@ -8,9 +8,9 @@
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [bar]
-fill = 
-empty = 
-indicator = 
+fill = x
+empty = o
+indicator = |
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -260,30 +260,30 @@ interval = 0.5
 ;   <ramp-coreload>
 ;;format = <label> <ramp-coreload>
 format = <bar-load> <label>
-format-prefix = " "
-format-background = ${color.shade2}
-format-padding = 2
+format-prefix = ""
+format-background = ${color.info_bar}
+format-padding = 5
 
 ; Available tokens:
 ;   %percentage% (default) - total cpu load averaged over all cores
 ;   %percentage-sum% - Cumulative load on all cores
 ;   %percentage-cores% - load percentage for each core
 ;   %percentage-core[1-9]% - load percentage for specific core
-label = "%percentage%%"
+label = "CPU %percentage%%"
 
 ; Only applies if <bar-load> is used
 bar-load-width = 10
 bar-load-gradient = false
 
-bar-load-indicator = ${bar.indicator}
+bar-load-indicator = 
 bar-load-indicator-foreground = ${color.foreground}
 
-bar-load-fill = ${bar.fill}
+bar-load-fill =
 bar-load-foreground-0 = ${color.foreground}
 bar-load-foreground-1 = ${color.foreground}
 bar-load-foreground-2 = ${color.foreground}
 
-bar-load-empty = ${bar.empty}
+bar-load-empty =
 bar-load-empty-foreground = #101010
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -377,9 +377,9 @@ interval = 2
 ;   <ramp-swap-used>
 ;   <ramp-swap-free>
 format = <bar-used> <label>
-format-prefix = " "
-format-background = ${color.shade3}
-format-padding = 2
+format-prefix = ""
+format-background = ${color.info_bar}
+format-padding = 5
 
 ; Available tokens:
 ;   %percentage_used% (default)
@@ -399,21 +399,21 @@ format-padding = 2
 ;   %gb_swap_free%
 ;   %gb_swap_used%
 
-label = "%mb_used%"
+label = "RAM %percentage_used%%"
 
 ; Only applies if <bar-used> is used
 bar-used-width = 10
 bar-used-gradient = false
 
-bar-used-indicator = ${bar.indicator}
+bar-used-indicator = 
 bar-used-indicator-foreground = ${color.foreground}
 
-bar-used-fill = ${bar.fill}
+bar-used-fill = 
 bar-used-foreground-0 = ${color.foreground}
 bar-used-foreground-1 = ${color.foreground}
 bar-used-foreground-2 = ${color.foreground}
 
-bar-used-empty = ${bar.empty}
+bar-used-empty = 
 bar-used-empty-foreground = #101010
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
