--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -10,238 +10,98 @@
 ;; Global WM Settings
 
 [global/wm]
-; Adjust the _NET_WM_STRUT_PARTIAL top value
-; Used for top aligned bars
 margin-bottom = 0
-
-; Adjust the _NET_WM_STRUT_PARTIAL bottom value
-; Used for bottom aligned bars
 margin-top = 0
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-;; File Inclusion
-; include an external file, like module file, etc.
 
 include-file = ~/.config/polybar/bars.ini
 include-file = ~/.config/polybar/colors.ini
 include-file = ~/.config/polybar/modules.ini
 include-file = ~/.config/polybar/user_modules.ini
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-;; Bar Settings
-
-[bar/main]
-; Use either of the following command to list available outputs:
-; If unspecified, the application will pick the first one it finds.
-; $ polybar -m | cut -d ':' -f 1
-; $ xrandr -q | grep " connected" | cut -d ' ' -f1
-monitor =
-
-; Use the specified monitor as a fallback if the main one is not found.
-monitor-fallback =
-
-; Require the monitor to be in connected state
-; XRandR sometimes reports my monitor as being disconnected (when in use)
+[bar/main-left]
 monitor-strict = false
-
-; Tell the Window Manager not to configure the window.
-; Use this to detach the bar if your WM is locking its size/position.
 override-redirect = false
-
-; Put the bar at the bottom of the screen
 bottom = false
-
-; Prefer fixed center position for the `modules-center` block
-; When false, the center position will be based on the size of the other blocks.
 fixed-center = true
 
-; Dimensions
-width = 99.5%
-offset-x = 0.25%
-offset-y = 5pt
-height = 24pt
-radius = 3
-
-; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
-background = ${color.background}
-
-; Foreground ARGB color (e.g. #f00, #ff992a, #ddff1023)
+background = ${color.left_background_lighter}
 foreground = ${color.foreground}
 
-; Background gradient (vertical steps)
-;   background-[0-9]+ = #aarrggbb
-;;background-0 = 
+width = 8.5%
+offset-x = 0.5%
+offset-y = 0.25%
+height = 2%
 
-; Value used for drawing rounded corners
-; Note: This shouldn't be used together with border-size because the border 
-; doesn't get rounded
-; Individual top/bottom values can be defined using:
-;   radius-{top,bottom}
-; radius-top = 0.0
-; radius-bottom = 0.0
-
-; Under-/overline pixel size and argb color
-; Individual values can be defined using:
-;   {overline,underline}-size
-;   {overline,underline}-color
 underline-size = 2
 underline-color = ${color.foreground}
 
-; Values applied to all borders
-; Individual side values can be defined using:
-;   border-{left,top,right,bottom}-size
-;   border-{left,top,right,bottom}-color
-; The top and bottom borders are added to the bar height, so the effective
-; window height is:
-;   height + border-top-size + border-bottom-size
-; Meanwhile the effective window width is defined entirely by the width key and
-; the border is placed withing this area. So you effectively only have the
-; following horizontal space on the bar:
-;   width - border-right-size - border-left-size
-border-size = 0
-border-color = ${color.background}
+border-size = 2
+radius = 12pt
+border-color = ${color.foreground}
 
-; Number of spaces to add at the beginning/end of the bar
-; Individual side values can be defined using:
-;   padding-{left,right}
 padding = 0
 
-; Number of spaces to add before/after each module
-; Individual side values can be defined using:
-;   module-margin-{left,right}
 module-margin-left = 0
 module-margin-right = 0
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+font-0 = SpaceMono Nerd Font:size=13;3
 
-; Fonts are defined using <font-name>;<vertical-offset>
-; Font names are specified using a fontconfig pattern.
-;   font-0 = NotoSans-Regular:size=8;2
-;   font-1 = MaterialIcons:size=10
-;   font-2 = Termsynu:size=8;-1
-;   font-3 = FontAwesome:size=10
-; See the Fonts wiki page for more details
+modules-left = launcher workspaces
 
-font-0 = FantasqueSansMono Nerd Font:size=15;2
-
-; Modules are added to one of the available blocks
-;   modules-left = cpu ram
-;   modules-center = xwindow xbacklight
-;   modules-right = ipc clock
-
-modules-left = launcher workspaces google github reddit gmail youtube spotify
-modules-center = spotify-status spotify-prev spotify-play-pause spotify-next
-modules-right = pulseaudio battery network date sysmenu
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-; The separator will be inserted between the output of each module
-separator =
-
-; Opacity value between 0.0 and 1.0 used on fade in/out
-dim-value = 1.0
-
-; Value to be used to set the WM_NAME atom
-; If the value is empty or undefined, the atom value
-; will be created from the following template: polybar-[BAR]_[MONITOR]
-; NOTE: The placeholders are not available for custom values
-wm-name = 
-
-; Locale used to localize various module data (e.g. date)
-; Expects a valid libc locale, for example: sv_SE.UTF-8
-locale = 
-
-; Position of the system tray window
-; If empty or undefined, tray support will be disabled
-; NOTE: A center aligned tray will cover center aligned modules
-;
-; Available positions:
-;   left
-;   center
-;   right
-;   none
 tray-position = none
-
-; If true, the bar will not shift its
-; contents when the tray changes
 tray-detached = false
-
-; Tray icon max size
 tray-maxsize = 16
-
-; Background color for the tray container 
-; ARGB color (e.g. #f00, #ff992a, #ddff1023)
-; By default the tray container will use the bar
-; background color.
-tray-background = ${color.background}
-
-; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
+tray-background = ${color.left_background_lighter}
 tray-offset-x = 0
 tray-offset-y = 0
-
-; Pad the sides of each tray icon
 tray-padding = 0
-
-; Scale factor for tray clients
 tray-scale = 1.0
 
-; Restack the bar window and put it above the
-; selected window manager's root
-;
-; Fixes the issue where the bar is being drawn
-; on top of fullscreen window's
-;
-; Currently supported WM's:
-;   bspwm
-;   i3 (requires: `override-redirect = true`)
-;;wm-restack =
-
-; Set a DPI values used when rendering text
-; This only affects scalable fonts
-; dpi = 
-
-; Enable support for inter-process messaging
-; See the Messaging wiki page for more details.
 enable-ipc = true
 
-; Fallback click handlers that will be called if
-; there's no matching module handler found.
-click-left = 
-click-middle = 
-click-right =
-scroll-up =
-scroll-down =
-double-click-left =
-double-click-middle =
-double-click-right =
+[bar/main-center]
+monitor = ${env:MONITOR:}
+inherit = bar/main-left
 
-; Requires polybar to be built with xcursor support (xcb-util-cursor)
-; Possible values are:
-; - default   : The default pointer as before, can also be an empty string (default)
-; - pointer   : Typically in the form of a hand
-; - ns-resize : Up and down arrows, can be used to indicate scrolling
-cursor-click = 
-cursor-scroll = 
+background = ${color.info_bar}
 
-;; WM Workspace Specific
+offset-x = 36%
+offset-y = 0.25%
+width = 28%
 
-; bspwm
-;;scroll-up = bspwm-desknext
-;;scroll-down = bspwm-deskprev
-;;scroll-up = bspc desktop -f prev.local
-;;scroll-down = bspc desktop -f next.local
+modules-left =
+modules-center = memory_bar title cpu_bar
 
-;i3
-;;scroll-up = i3wm-wsnext
-;;scroll-down = i3wm-wsprev
-;;scroll-up = i3-msg workspace next_on_output
-;;scroll-down = i3-msg workspace prev_on_output
+[bar/main-right]
+monitor = ${env:MONITOR:}
+inherit = bar/main-left
 
-[bar/external-hdmi-0]
-inherit = bar/main
-monitor=HDMI-0
+background = ${color.shade3}
+border-color = ${color.foreground}
+
+offset-x = 81.5%
+width = 18%
+height = 2%
+
+modules-left =
+modules-right = media pulseaudio battery network date sysmenu
+
+[bar/external-left]
+inherit = bar/main-left
+monitor = HDMI-0
+
+width = 10.75%
+
+[bar/external-right]
+inherit = bar/main-left
+monitor = HDMI-0
+
+offset-x = 76%
+width = 23.75%
+height = 2%
+
+modules-left =
+modules-right = media pulseaudio battery network date sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
