--- a/dot_config/polybar/modules.ini
+++ b/dot_config/polybar/modules.ini
@@ -169,7 +169,7 @@ format-discharging-padding = 2
 ;   <bar-capacity>
 ;   <ramp-capacity>
 format-full = <label-full>
-format-full-prefix = 
+format-full-prefix = 
 format-full-background = ${color.shade5}
 format-full-padding = 2
 
@@ -214,137 +214,7 @@ animation-charging-4 = 
 ; Framerate in milliseconds
 animation-charging-framerate = 750
 
-; Only applies if <animation-discharging> is used
-;;animation-discharging-0 = ${battery.anim0}
-;;animation-discharging-1 = ${battery.anim1}
-
-; Framerate in milliseconds
-;animation-discharging-framerate = 500
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-;;[module/bspwm]
-;;type = internal/bspwm
-
-; Only show workspaces defined on the same output as the bar
-; NOTE: The bspwm and XRandR monitor names must match, which they do by default.
-; Default: true
-;;pin-workspaces = true
-
-; Output mode flags after focused state label
-; Default: false
-;;inline-mode = false
-
-; Create click handler used to focus workspace
-; Default: true
-;;enable-click = false
-
-; Create scroll handlers used to cycle workspaces
-; Default: true
-;;enable-scroll = false
-
-; Set the scroll cycle direction 
-; Default: true
-;;reverse-scroll = false
-
-; Use fuzzy (partial) matching on labels when assigning 
-; icons to workspaces
-; Example: code;♚ will apply the icon to all workspaces 
-; containing 'code' in the label
-; Default: false
-;;fuzzy-match = true
-
-; ws-icon-[0-9]+ = label;icon
-; Note that the label needs to correspond with the bspwm workspace name
-;;ws-icon-0 = code;♚
-;;ws-icon-1 = office;♛
-;;ws-icon-2 = graphics;♜
-;;ws-icon-3 = mail;♝
-;;ws-icon-4 = web;♞
-;;ws-icon-default = ♟
-
-; Available tags:
-;   <label-monitor>
-;   <label-state> - gets replaced with <label-(focused|urgent|occupied|empty)>
-;   <label-mode> - gets replaced with <label-(monocle|tiled|fullscreen|floating|locked|sticky|private)>
-; Default: <label-state>
-;;format = <label-state> <label-mode>
-
-; Available tokens:
-;   %name%
-; Default: %name%
-;;label-monitor = %name%
-
-; If any values for label-dimmed-N are defined, the workspace/mode
-; colors will get overridden with those values if the monitor is out of focus
-; To only override workspaces in a specific state, use:
-;   label-dimmed-focused
-;   label-dimmed-occupied
-;   label-dimmed-urgent
-;   label-dimmed-empty
-;;label-dimmed-foreground = #555
-;;label-dimmed-underline = ${bar/top.background}
-;;label-dimmed-focused-background = #f00
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-; Default: %icon%  %name%
-;;label-focused = %icon%
-;;label-focused-foreground = #ffffff
-;;label-focused-background = #3f3f3f
-;;label-focused-underline = #fba922
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-; Default: %icon%  %name%
-;;label-occupied = %icon%
-;;label-occupied-underline = #555555
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-; Default: %icon%  %name%
-;;label-urgent = %icon%
-;;label-urgent-foreground = #000000
-;;label-urgent-background = #bd2c40
-;;label-urgent-underline = #9b0a20
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-; Default: %icon%  %name%
-;;label-empty = %icon%
-;;label-empty-foreground = #55
-
-; The following labels will be used to indicate the layout/mode
-; for the focused workspace. Requires <label-mode>
-;
-; Available tokens:
-;   None
-;label-monocle = 
-;label-tiled = 
-;label-fullscreen = 
-;label-floating = 
-;label-pseudotiled = P
-;label-locked = 
-;label-locked-foreground = #bd2c40
-;label-sticky = 
-;label-sticky-foreground = #fba922
-;label-private = 
-;label-private-foreground = #bd2c40
-
-; Separator in between workspaces
-;;label-separator = |
-;;label-separator-padding = 2
-;;label-separator-foreground = #ffb52a
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+label-active-font = 1
 
 [module/cpu]
 type = internal/cpu
@@ -392,7 +262,7 @@ interval = 1.0
 ;;date = %Y-%m-%d%
 
 ; Optional time format
-time = "  %H:%M:%S %p"
+time = "  %H:%M:%S"
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
@@ -402,7 +272,7 @@ time-alt = "  %a, %d %b %Y"
 ; Available tags:
 ;   <label> (default)
 format = <label>
-format-background = ${color.shade3}
+format-background = ${color.shade6}
 format-padding = 2
 
 ; Available tokens:
@@ -887,7 +757,7 @@ interval = 5
 ;   <ramp-volume>
 ;   <bar-volume>
 format-volume = <ramp-volume>  <label-volume>
-format-volume-background = ${color.shade3}
+format-volume-background = ${color.shade4}
 format-volume-padding = 2
 
 ; Available tags:
@@ -896,7 +766,7 @@ format-volume-padding = 2
 ;   <bar-volume>
 format-muted = <label-muted>
 format-muted-prefix = 
-format-muted-background = ${color.shade3}
+format-muted-background = ${color.shade4}
 format-muted-padding = 2
 
 ; Available tokens:
@@ -1019,7 +889,7 @@ type = internal/xwindow
 ;   <label> (default)
 format = <label>
 format-prefix = 
-format-background = ${color.shade2}
+format-background = ${color.info_bar_darker}
 format-padding = 2
 
 ; Available tokens:
@@ -1052,24 +922,13 @@ enable-click = true
 ; Default: true
 enable-scroll = true
 
-; icon-[0-9]+ = <desktop-name>;<icon>
-; NOTE: The desktop name needs to match the name configured by the WM
-; You can get a list of the defined desktops using:
-; $ xprop -root _NET_DESKTOP_NAMES
-icon-0 = 1;
-icon-1 = 2;
-icon-2 = 3;
-icon-3 = 4;
-icon-4 = 5;
-icon-default = 
-
 ; Available tags:
 ;   <label-monitor>
 ;   <label-state> - gets replaced with <label-(active|urgent|occupied|empty)>
 ; Default: <label-state>
 format = <label-state>
 format-padding = 1
-format-background = ${color.shade2}
+format-background = ${color.left_background_lighter}
 
 ; Available tokens:
 ;   %name%
@@ -1082,7 +941,7 @@ label-monitor = %name%
 ;   %index%
 ; Default: %icon%  %name%
 label-active =  
-label-active-foreground = ${color.foreground}
+label-active-foreground = ${color.foreground-alt}
 
 ; Available tokens:
 ;   %name%
@@ -1090,7 +949,7 @@ label-active-foreground = ${color.foreground}
 ;   %index%
 ; Default: %icon%  %name%
 label-occupied =  
-label-occupied-foreground = ${color.foreground}
+label-occupied-foreground = ${color.foreground-alt}
 
 ; Available tokens:
 ;   %name%
@@ -1106,6 +965,7 @@ label-urgent-foreground = ${color.background}
 ;   %index%
 ; Default: %icon%  %name%
 label-empty =  
+label-empty-foreground = ${color.foreground-alt}
 
 label-active-padding = 1
 label-urgent-padding = 1
