Updating kitty configuration

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,34 +1,38 @@
 # Themes
-include			Gruvbox_Dark.conf
+include			everforest.conf
 
 # Font
-font_family		FantasqueSansMono Nerd Font
-font_size		15
+font_family		JetBrainsMono Nerd Font
+font_size		16
 bold_font		auto
 italic_font		auto
 bold_italic_font	auto
 
 # Window properties
-window_border_width	0.5
-hide_window_decorations	no
+window_border_width	2
+hide_window_decorations	yes
 window_padding_width	3
 window_padding_height	3
 
-background_opacity	0.95
+background_opacity	0.8
 
 # Window border line
 window_margin_width	5
 window_border_color	#ff0000
 
-tab_border_width	0.5
+tab_border_width	2
 tab_border_color	#ff0000
 
-tab_bar_style		separator
+tab_bar_style		powerline
 
 # Miscellaneous
 enable_audio_bell	no
-active_border_color	#88ff88
+active_border_color	#ff8888
 inactive_border_color	#8888ff
+
+# Cursor
+cursor			#ccffcc
+cursor_text_color	#559955
 
 # Window tiling
 enabled_layouts		splits
@@ -40,3 +44,5 @@ map shift+left		move_window left
 map shift+right		move_window right
 map shift+down		move_window down
 map ctrl+r		start_resizing_window
+map ctrl+alt+right	next_tab
+map ctrl+alt+left	previous_tab
