Adding picom config
Also updating polybar

--- a/dot_config/polybar/colors.ini
+++ b/dot_config/polybar/colors.ini
@@ -3,23 +3,23 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #5598685C
-foreground = #cccccc
+background = #55000000
+foreground = #ffffff
 foreground-alt = #000000
 
 ;; shades
-shade1 = #55eb1c4d
-shade2 = #33eb1c4d
-shade3 = #55eb1c4d
-shade4 = #77eb1c4d
-shade5 = #99eb1c4d
-shade6 = #bbeb1c4d
-shade7 = #ddeb1c4d
+shade1 = #55000000
+shade2 = #55000000
+shade3 = #55000000
+shade4 = #55000000
+shade5 = #55000000
+shade6 = #55000000
+shade7 = #55000000
 
 ;; Left bar colors
-left_background = #99c494d6
-left_background_lighter = #99e6c4f2
+left_background = #55000000
+left_background_lighter = #55000000
 
 ;; Center bar colors
-info_bar = #99e663be
-info_bar_darker = #99c9349c
+info_bar = #55000000
+info_bar_darker = #55000000
