--- a/dot_config/polybar/modules.ini
+++ b/dot_config/polybar/modules.ini
@@ -941,7 +941,7 @@ label-monitor = %name%
 ;   %index%
 ; Default: %icon%  %name%
 label-active =  
-label-active-foreground = ${color.foreground-alt}
+label-active-foreground = ${color.foreground}
 
 ; Available tokens:
 ;   %name%
@@ -949,7 +949,7 @@ label-active-foreground = ${color.foreground-alt}
 ;   %index%
 ; Default: %icon%  %name%
 label-occupied =  
-label-occupied-foreground = ${color.foreground-alt}
+label-occupied-foreground = ${color.foreground}
 
 ; Available tokens:
 ;   %name%
@@ -965,7 +965,7 @@ label-urgent-foreground = ${color.background}
 ;   %index%
 ; Default: %icon%  %name%
 label-empty =  
-label-empty-foreground = ${color.foreground-alt}
+label-empty-foreground = ${color.foreground}
 
 label-active-padding = 1
 label-urgent-padding = 1
