--- a/dot_config/polybar/user_modules.ini
+++ b/dot_config/polybar/user_modules.ini
@@ -69,7 +69,7 @@ content = venki
 
 ; "content" has the same properties as "format-NAME"
 content-background = ${color.left_background}
-content-foreground = ${color.foreground-alt}
+content-foreground = ${color.foreground}
 content-padding = 10px
 
 ; TODO: eww widget to browse apps
