--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -24,7 +24,7 @@ override-redirect = false
 bottom = false
 fixed-center = true
 
-background = ${color.left_background_lighter}
+background = ${color.left_background}
 foreground = ${color.foreground}
 
 width = 8.5%
@@ -44,14 +44,14 @@ padding = 0
 module-margin-left = 0
 module-margin-right = 0
 
-font-0 = SpaceMono Nerd Font:size=13;3
+font-0 = JetBrainsMono Nerd Font:size=13;3
 
 modules-left = launcher workspaces
 
 tray-position = none
 tray-detached = false
 tray-maxsize = 16
-tray-background = ${color.left_background_lighter}
+tray-background = ${color.left_background}
 tray-offset-x = 0
 tray-offset-y = 0
 tray-padding = 0
