Updating with new themes

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,20 +1,33 @@
 # Themes
-include			everforest.conf
+include	                frappe.conf
 
 # Font
-font_family		JetBrainsMono Nerd Font
-font_size		16
+# font_family		JetBrainsMono Nerd Font
+# font_family		SpaceMono Nerd Font
+# font_family		DaddyTimeMono Nerd Font
+# font_family		Monofur Nerd Font
+# font_family		Iosevka Nerd Font
+# font_family		VictorMono Nerd Font
+# font_family		Lilex Nerd Font
+# font_family		Anonymice Nerd Font
+# font_family		FantasqueSansMono Nerd Font
+# font_family		Hurmit Nerd Font
+font_family		GohuFont 11 Nerd Font
+# font_family		BigBlueTermPlus Nerd Font
+
+font_size		14
 bold_font		auto
 italic_font		auto
 bold_italic_font	auto
 
 # Window properties
-window_border_width	2
+window_border_width     1
 hide_window_decorations	yes
 window_padding_width	3
 window_padding_height	3
 
-background_opacity	0.8
+# background_opacity	0.85
+background_opacity	1
 
 # Window border line
 window_margin_width	5
@@ -29,10 +42,6 @@ tab_bar_style		powerline
 enable_audio_bell	no
 active_border_color	#ff8888
 inactive_border_color	#8888ff
-
-# Cursor
-cursor			#ccffcc
-cursor_text_color	#559955
 
 # Window tiling
 enabled_layouts		splits
