--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -2,7 +2,7 @@
 include	                frappe.conf
 
 # Font
-# font_family		JetBrainsMono Nerd Font
+font_family		JetBrainsMono Nerd Font
 # font_family		SpaceMono Nerd Font
 # font_family		DaddyTimeMono Nerd Font
 # font_family		Monofur Nerd Font
@@ -12,8 +12,9 @@ include	                frappe.conf
 # font_family		Anonymice Nerd Font
 # font_family		FantasqueSansMono Nerd Font
 # font_family		Hurmit Nerd Font
-font_family		GohuFont 11 Nerd Font
+# font_family		GohuFont 11 Nerd Font
 # font_family		BigBlueTermPlus Nerd Font
+# font_family		Cozette
 
 font_size		14
 bold_font		auto
@@ -26,8 +27,8 @@ hide_window_decorations	yes
 window_padding_width	3
 window_padding_height	3
 
-# background_opacity	0.85
-background_opacity	1
+background_opacity	0.6
+# background_opacity	1
 
 # Window border line
 window_margin_width	5
