Cleaning kitty and nvim configs

--- a/dot_config/kitty/themes/rose-pine-dawn.conf
+++ b/dot_config/kitty/themes/rose-pine-dawn.conf
@@ -5,7 +5,7 @@
 ## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
 
 foreground               #575279
-background               #e6dfdc
+background               #faf4ed
 selection_foreground     #575279
 selection_background     #dfdad9
 
@@ -53,4 +53,5 @@ color14  #d7827e
 # white
 color7   #575279
 color15  #575279
+
 
