--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,33 +1,22 @@
 # Themes
-include	                frappe.conf
+include	                themes/rose-pine-dawn.conf
 
 # Font
-font_family		JetBrainsMono Nerd Font
-# font_family		SpaceMono Nerd Font
-# font_family		DaddyTimeMono Nerd Font
-# font_family		Monofur Nerd Font
-# font_family		Iosevka Nerd Font
-# font_family		VictorMono Nerd Font
-# font_family		Lilex Nerd Font
-# font_family		Anonymice Nerd Font
-# font_family		FantasqueSansMono Nerd Font
-# font_family		Hurmit Nerd Font
+font_family		JetBrainsMono NerdFont
 # font_family		GohuFont 11 Nerd Font
-# font_family		BigBlueTermPlus Nerd Font
-# font_family		Cozette
 
-font_size		14
+font_size		13
 bold_font		auto
 italic_font		auto
 bold_italic_font	auto
 
 # Window properties
 window_border_width     1
-hide_window_decorations	yes
+# hide_window_decorations	yes
 window_padding_width	3
 window_padding_height	3
 
-background_opacity	0.6
+# background_opacity	0.9
 # background_opacity	1
 
 # Window border line
@@ -40,9 +29,9 @@ tab_border_color	#ff0000
 tab_bar_style		powerline
 
 # Miscellaneous
-enable_audio_bell	no
-active_border_color	#ff8888
-inactive_border_color	#8888ff
+# enable_audio_bell	no
+# active_border_color	#ff8888
+# inactive_border_color	#8888ff
 
 # Window tiling
 enabled_layouts		splits
