--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,23 +1,24 @@
 # Themes
-include	                themes/rose-pine-dawn.conf
+# include	                themes/rose-pine-dawn.conf
+include	                themes/nord.conf
 
 # Font
-font_family		JetBrainsMono NerdFont
+font_family		IosevkaTerm Nerd Font
+# font_family		ZedMono Nerd Font
+# font_family		JetBrainsMono NerdFont
 # font_family		GohuFont 11 Nerd Font
 
-font_size		13
+font_size		14
 bold_font		auto
 italic_font		auto
 bold_italic_font	auto
+# disable_ligatures       always
 
 # Window properties
 window_border_width     1
 # hide_window_decorations	yes
 window_padding_width	3
 window_padding_height	3
-
-# background_opacity	0.9
-# background_opacity	1
 
 # Window border line
 window_margin_width	5
@@ -30,7 +31,7 @@ tab_bar_style		powerline
 
 # Miscellaneous
 # enable_audio_bell	no
-# active_border_color	#ff8888
+active_border_color	#00aa00
 # inactive_border_color	#8888ff
 
 # Window tiling
